--- a/apps/portals/aggregator-demo/application/src/partials/chat/chat-banner.component.scss
+++ b/apps/portals/aggregator-demo/application/src/partials/chat/chat-banner.component.scss
@@ -3,5 +3,8 @@
 .chat-banner-content {
   position: relative;
   height: 100%;
-  @include grid-container($container-lg);
+  width: 100%;
+  max-width: $container-lg;
+  margin-left: auto;
+  margin-right: auto;
 }
